--- a/css/maincss.css
+++ b/css/maincss.css
@@ -15,11 +15,11 @@ h5 {	padding:7px 10px; margin:0; font-size: 1.0em;}
 label { font-size: 0.9em;}
 
 
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 60em) {
 	h5 {	padding:7px 10px; margin:0; font-size: 1.0em;}
 }
 
-@media only screen and (max-width: 50em) {
+@media only screen and (max-width: 60em) {
 	h5 {	display: none; }
 }
 
@@ -37,16 +37,16 @@ background-repeat:no-repeat; background-position:left bottom; border: 1px solid 
 
 #home { position: absolute; top: 5px; left: 5px; z-index: 5;} 
 
-@media only screen and (min-width: 50em) {
-	#headertitle { position: absolute; top: 16px; left: 50px; right:300px; overflow: hidden; text-align:center;  font-size: 1.2em; line-height:1.2em;} 
+@media only screen and (min-width: 60em) {
+	#headertitle { position: absolute; top: 16px; left: 50px; right:250px; overflow: hidden; text-align:center;  font-size: 1.2em; line-height:1.2em;} 
 }
 
-@media only screen and (max-width: 50em) {
+@media only screen and (max-width: 60em) {
 	#headertitle { position: absolute; top: 16px; left: 10px; right:10px; overflow: hidden; text-align:center; } 
 }
 
 @media only screen and (min-width: 60em) {
-	#headerlinks { position: absolute; top: 42px; width: 800px; right: 5px; font-size: 1.0em;  line-height: 110%; padding: 10px 5px; 0px 10px; text-align: right; }
+	#headerlinks { position: absolute; top: 42px; width: 800px; right: 5px; font-size: 1.0em;  line-height: 110%; padding: 10px 5px; 0px 10px; text-align: right; z-index:10; }
 }
 
 @media only screen and (max-width: 60em) {
@@ -75,7 +75,7 @@ padding: 10px 10px 10px 10px; background: #fff; z-index: 10001;}
 }
 
 	.imgcap {font-size: 0.95em;margin-top: 5px;}
-
+	
 	.notes {font-size: 0.95em;margin-top: 5px;}
 
 @media only screen and (min-width: 60em) {
@@ -212,37 +212,37 @@ padding: 10px 10px 10px 10px; background: #fff; z-index: 10001;}
 
 }
 
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 60em) {
  	#map { position: absolute; top: 115px; left: 10px; right: 10px; bottom:10px; overflow: hidden; border: 1px solid #592F57; box-shadow: 0 0px 0px #CCC; border-radius: 4px; background-color: #ded8c2;} 
 }
 
-@media only screen and (max-width: 50em) {
+@media only screen and (max-width: 60em) {
  	#map { position: absolute; top: 105px; left: 0px !important; right: 0px  !important; bottom:0px  !important; width: 100%; overflow: hidden; border: 1px solid #592F57; box-shadow: 0 0px 0px #CCC; border-radius: 4px; background-color: #ded8c2;} 
 }
 
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 60em) {
 	#mapleft { position: absolute; left: 10px; right: 50.2%; top: 125px; bottom: 10px; border: 1px solid #ccc; background-color: #d9dacc;}
 }
 
-@media only screen and (max-width: 50em) {
+@media only screen and (max-width: 60em) {
 	#mapleft { position: absolute; left: 10px; right: 50.2%; top: 125px; bottom: 60px; border: 1px solid #ccc; background-color: #d9dacc;}
 }
 
 
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 60em) {
 	#mapright { position: absolute; left: 50.2%; right: 10px; top: 125px; bottom: 10px; border: 1px solid #ccc; background-color: #d9dacc;}
 }
 
-@media only screen and (max-width: 50em) {
+@media only screen and (max-width: 60em) {
 	#mapright { position: absolute; left: 50.2%; right: 10px; top: 125px; bottom: 60px; border: 1px solid #ccc; background-color: #d9dacc;}
 }
 
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 60em) {
 #sidebar { position: absolute; top: 125px; left: 55px; width: 330px; font-size: 14px; border: 1px solid #592F57; border-radius: 8px; box-shadow: 0 0px 0px #CCC; 
 padding: 10px 10px 10px 10px; background: #fff; z-index: 3000;}
 }
 
-@media only screen and (max-width: 50em) {
+@media only screen and (max-width: 60em) {
 #sidebar { position: absolute; top: 115px; left: 55px; width: 290px; font-size: 14px; border: 1px solid #592F57; border-radius: 8px; box-shadow: 0 0px 0px #CCC; 
 padding: 10px 10px 10px 10px; background: #fff; z-index: 3000;}
 }
@@ -320,12 +320,12 @@ overflow-wrap: break-word;
 
 
 
-@media only screen and (min-width: 50em) {
-	#logo { position: absolute; right: 12px; top: 12px; width: 480px; height: 45px;  z-index: 100001; background-color: white; border-radius: 2px; }
+@media only screen and (min-width: 60em) {
+	#logo { position: absolute; right: 12px; top: 12px; width: 480px; height: 45px;  z-index: 100001; background-color: white; border-radius: 2px; z-index: 5; }
 }
 
 
-@media only screen and (max-width: 50em)  {
+@media only screen and (max-width: 60em)  {
 	#logo { position: absolute; right: 2px; bottom: 0px; max-width: 380px; height: 50px;  z-index: 100001; background-color: white; border-radius: 2px;}
 }
 
@@ -346,7 +346,7 @@ overflow-wrap: break-word;
 }
 
 @media only screen and (min-width: 60em) {
-	#wol { margin:5px; width:auto; max-height:60px;!important;  overflow: hidden; float: right;}
+	#wol { margin:5px; width:auto; max-height:50px;!important;  overflow: hidden; float: right;}
 }
 
 @media only screen and (max-width: 60em) {
